# parser_3000

./: .gitignore  README.md  __flags.json  main.py  pyproject.toml
merge_files_module/: file_module.py  нити_макет.xlsx
p3000/: __init__.py
p3000/bott/: __flags.json  __init__.py  core.py  greet.py  helpers.py  keyboard.py  set_handlers.py
p3000/parsers/: __init__.py  base.py  pars_manager.py
p3000/parsers/Avito_parser/: avito.py  cache_core.py
p3000/parsers/Ivanovo_parsers/: __init__.py  akvilon.py  csy.py  default_kvartal.py  evropey_stile.py  fenix.py  ksk_holding.py  levitan.py  olimp.py  stroitec.py  vidniy.py
p3000/parsers/Vladimir_parsers/: __flags.json  __init__.py  aviator.py  glorax.py  legenda.py  nmarket.py  vladimir_sk.py  vt.py
p3000/parsers/castom/: avito_parser.py
